; ModuleID = '/home/carl/AnghaBench/radare2/libr/asm/arch/arm/gnu/extr_floatformat.c_mant_bits_set.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/asm/arch/arm/gnu/extr_floatformat.c_mant_bits_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.floatformat = type { i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.floatformat*, i8*)* @mant_bits_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mant_bits_set(%struct.floatformat* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.floatformat*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.floatformat* %0, %struct.floatformat** %4, align 8
  store i8* %1, i8** %5, align 8
  %9 = load %struct.floatformat*, %struct.floatformat** %4, align 8
  %10 = getelementptr inbounds %struct.floatformat, %struct.floatformat* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  store i32 %11, i32* %7, align 4
  %12 = load %struct.floatformat*, %struct.floatformat** %4, align 8
  %13 = getelementptr inbounds %struct.floatformat, %struct.floatformat* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  store i32 %14, i32* %8, align 4
  br label %15

15:                                               ; preds = %33, %2
  %16 = load i32, i32* %8, align 4
  %17 = icmp sgt i32 %16, 0
  br i1 %17, label %18, label %40

18:                                               ; preds = %15
  %19 = load i32, i32* %8, align 4
  %20 = call i32 @min(i32 %19, i32 32)
  store i32 %20, i32* %6, align 4
  %21 = load i8*, i8** %5, align 8
  %22 = load %struct.floatformat*, %struct.floatformat** %4, align 8
  %23 = getelementptr inbounds %struct.floatformat, %struct.floatformat* %22, i32 0, i32 3
  %24 = load i32, i32* %23, align 4
  %25 = load %struct.floatformat*, %struct.floatformat** %4, align 8
  %26 = getelementptr inbounds %struct.floatformat, %struct.floatformat* %25, i32 0, i32 2
  %27 = load i32, i32* %26, align 4
  %28 = load i32, i32* %7, align 4
  %29 = load i32, i32* %6, align 4
  %30 = call i64 @get_field(i8* %21, i32 %24, i32 %27, i32 %28, i32 %29)
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %33

32:                                               ; preds = %18
  store i32 1, i32* %3, align 4
  br label %41

33:                                               ; preds = %18
  %34 = load i32, i32* %6, align 4
  %35 = load i32, i32* %7, align 4
  %36 = add i32 %35, %34
  store i32 %36, i32* %7, align 4
  %37 = load i32, i32* %6, align 4
  %38 = load i32, i32* %8, align 4
  %39 = sub i32 %38, %37
  store i32 %39, i32* %8, align 4
  br label %15

40:                                               ; preds = %15
  store i32 0, i32* %3, align 4
  br label %41

41:                                               ; preds = %40, %32
  %42 = load i32, i32* %3, align 4
  ret i32 %42
}

declare dso_local i32 @min(i32, i32) #1

declare dso_local i64 @get_field(i8*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
